--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,7 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
-build-parser-test-Desktop_Qt_5_7_1_MinGW_32bit-Release/
-build-parser-test-Desktop_Qt_5_7_1_MSVC2015_64bit-Release/
-build-parser-test-g-Release/
-build-parser-test-Desktop_Qt_5_7_1_MinGW_32bit-Debug/
-build-parser-test-Desktop_Qt_5_7_1_MSVC2015_64bit-Debug/
+build*/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
